// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty panel view component renders empty panel view with disabled popover 1`] = `
<EmptyPanelView
  addVizDisabled={true}
  showFlyout={[MockFunction]}
>
  <div>
    <EuiSpacer
      size="xxl"
    >
      <div
        className="euiSpacer euiSpacer--xxl"
      />
    </EuiSpacer>
    <EuiText
      data-test-subj="addFirstVisualizationText"
      textAlign="center"
    >
      <div
        className="euiText euiText--medium"
        data-test-subj="addFirstVisualizationText"
      >
        <EuiTextAlign
          textAlign="center"
        >
          <div
            className="euiTextAlign euiTextAlign--center"
          >
            <h2>
              Start by adding your first visualization
            </h2>
            <EuiSpacer
              size="m"
            >
              <div
                className="euiSpacer euiSpacer--m"
              />
            </EuiSpacer>
            <EuiText
              color="subdued"
              size="m"
            >
              <div
                className="euiText euiText--medium"
              >
                <EuiTextColor
                  color="subdued"
                  component="div"
                >
                  <div
                    className="euiTextColor euiTextColor--subdued"
                  >
                    Use PPL Queries to fetch & filter observability data and create visualizations
                  </div>
                </EuiTextColor>
              </div>
            </EuiText>
          </div>
        </EuiTextAlign>
      </div>
    </EuiText>
    <EuiSpacer
      size="m"
    >
      <div
        className="euiSpacer euiSpacer--m"
      />
    </EuiSpacer>
    <EuiFlexGroup
      justifyContent="center"
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <AddVisualizationPopover
              addVizDisabled={true}
              showFlyout={[MockFunction]}
            >
              <EuiPopover
                anchorPosition="downLeft"
                button={
                  <EuiSmallButton
                    data-test-subj="addVisualizationButton"
                    disabled={true}
                    iconSide="right"
                    iconType="arrowDown"
                    onClick={[Function]}
                  >
                    Add visualization
                  </EuiSmallButton>
                }
                closePopover={[Function]}
                display="inlineBlock"
                hasArrow={true}
                id="addVisualizationContextMenu"
                isOpen={false}
                ownFocus={true}
                panelPaddingSize="none"
              >
                <div
                  className="euiPopover euiPopover--anchorDownLeft"
                  id="addVisualizationContextMenu"
                >
                  <div
                    className="euiPopover__anchor"
                  >
                    <EuiSmallButton
                      data-test-subj="addVisualizationButton"
                      disabled={true}
                      iconSide="right"
                      iconType="arrowDown"
                      onClick={[Function]}
                    >
                      <EuiButton
                        data-test-subj="addVisualizationButton"
                        disabled={true}
                        iconSide="right"
                        iconType="arrowDown"
                        onClick={[Function]}
                        size="s"
                      >
                        <EuiButtonDisplay
                          baseClassName="euiButton"
                          data-test-subj="addVisualizationButton"
                          disabled={true}
                          element="button"
                          iconSide="right"
                          iconType="arrowDown"
                          isDisabled={true}
                          onClick={[Function]}
                          size="s"
                          type="button"
                        >
                          <button
                            className="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
                            data-test-subj="addVisualizationButton"
                            disabled={true}
                            onClick={[Function]}
                            style={
                              Object {
                                "minWidth": undefined,
                              }
                            }
                            type="button"
                          >
                            <EuiButtonContent
                              className="euiButton__content"
                              iconSide="right"
                              iconType="arrowDown"
                              textProps={
                                Object {
                                  "className": "euiButton__text",
                                }
                              }
                            >
                              <span
                                className="euiButtonContent euiButtonContent--iconRight euiButton__content"
                              >
                                <EuiIcon
                                  className="euiButtonContent__icon"
                                  color="inherit"
                                  size="m"
                                  type="arrowDown"
                                >
                                  <EuiIconBeaker
                                    aria-hidden={true}
                                    className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                    focusable="false"
                                    role="img"
                                    style={null}
                                  >
                                    <svg
                                      aria-hidden={true}
                                      className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                      focusable="false"
                                      height={16}
                                      role="img"
                                      style={null}
                                      viewBox="0 0 16 16"
                                      width={16}
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                                      />
                                    </svg>
                                  </EuiIconBeaker>
                                </EuiIcon>
                                <span
                                  className="euiButton__text"
                                >
                                  Add visualization
                                </span>
                              </span>
                            </EuiButtonContent>
                          </button>
                        </EuiButtonDisplay>
                      </EuiButton>
                    </EuiSmallButton>
                  </div>
                </div>
              </EuiPopover>
            </AddVisualizationPopover>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
    <EuiSpacer
      size="xxl"
    >
      <div
        className="euiSpacer euiSpacer--xxl"
      />
    </EuiSpacer>
  </div>
</EmptyPanelView>
`;

exports[`Empty panel view component renders empty panel view with enabled popover 1`] = `
<EmptyPanelView
  addVizDisabled={false}
  showFlyout={[MockFunction]}
>
  <div>
    <EuiSpacer
      size="xxl"
    >
      <div
        className="euiSpacer euiSpacer--xxl"
      />
    </EuiSpacer>
    <EuiText
      data-test-subj="addFirstVisualizationText"
      textAlign="center"
    >
      <div
        className="euiText euiText--medium"
        data-test-subj="addFirstVisualizationText"
      >
        <EuiTextAlign
          textAlign="center"
        >
          <div
            className="euiTextAlign euiTextAlign--center"
          >
            <h2>
              Start by adding your first visualization
            </h2>
            <EuiSpacer
              size="m"
            >
              <div
                className="euiSpacer euiSpacer--m"
              />
            </EuiSpacer>
            <EuiText
              color="subdued"
              size="m"
            >
              <div
                className="euiText euiText--medium"
              >
                <EuiTextColor
                  color="subdued"
                  component="div"
                >
                  <div
                    className="euiTextColor euiTextColor--subdued"
                  >
                    Use PPL Queries to fetch & filter observability data and create visualizations
                  </div>
                </EuiTextColor>
              </div>
            </EuiText>
          </div>
        </EuiTextAlign>
      </div>
    </EuiText>
    <EuiSpacer
      size="m"
    >
      <div
        className="euiSpacer euiSpacer--m"
      />
    </EuiSpacer>
    <EuiFlexGroup
      justifyContent="center"
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem
          grow={false}
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <AddVisualizationPopover
              addVizDisabled={false}
              showFlyout={[MockFunction]}
            >
              <EuiPopover
                anchorPosition="downLeft"
                button={
                  <EuiSmallButton
                    data-test-subj="addVisualizationButton"
                    disabled={false}
                    iconSide="right"
                    iconType="arrowDown"
                    onClick={[Function]}
                  >
                    Add visualization
                  </EuiSmallButton>
                }
                closePopover={[Function]}
                display="inlineBlock"
                hasArrow={true}
                id="addVisualizationContextMenu"
                isOpen={false}
                ownFocus={true}
                panelPaddingSize="none"
              >
                <div
                  className="euiPopover euiPopover--anchorDownLeft"
                  id="addVisualizationContextMenu"
                >
                  <div
                    className="euiPopover__anchor"
                  >
                    <EuiSmallButton
                      data-test-subj="addVisualizationButton"
                      disabled={false}
                      iconSide="right"
                      iconType="arrowDown"
                      onClick={[Function]}
                    >
                      <EuiButton
                        data-test-subj="addVisualizationButton"
                        disabled={false}
                        iconSide="right"
                        iconType="arrowDown"
                        onClick={[Function]}
                        size="s"
                      >
                        <EuiButtonDisplay
                          baseClassName="euiButton"
                          data-test-subj="addVisualizationButton"
                          disabled={false}
                          element="button"
                          iconSide="right"
                          iconType="arrowDown"
                          isDisabled={false}
                          onClick={[Function]}
                          size="s"
                          type="button"
                        >
                          <button
                            className="euiButton euiButton--primary euiButton--small"
                            data-test-subj="addVisualizationButton"
                            disabled={false}
                            onClick={[Function]}
                            style={
                              Object {
                                "minWidth": undefined,
                              }
                            }
                            type="button"
                          >
                            <EuiButtonContent
                              className="euiButton__content"
                              iconSide="right"
                              iconType="arrowDown"
                              textProps={
                                Object {
                                  "className": "euiButton__text",
                                }
                              }
                            >
                              <span
                                className="euiButtonContent euiButtonContent--iconRight euiButton__content"
                              >
                                <EuiIcon
                                  className="euiButtonContent__icon"
                                  color="inherit"
                                  size="m"
                                  type="arrowDown"
                                >
                                  <EuiIconArrowDown
                                    aria-hidden={true}
                                    className="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                                    focusable="false"
                                    role="img"
                                    style={null}
                                  >
                                    <svg
                                      aria-hidden={true}
                                      className="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                                      focusable="false"
                                      height={16}
                                      role="img"
                                      style={null}
                                      viewBox="0 0 16 16"
                                      width={16}
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                        fillRule="non-zero"
                                      />
                                    </svg>
                                  </EuiIconArrowDown>
                                </EuiIcon>
                                <span
                                  className="euiButton__text"
                                >
                                  Add visualization
                                </span>
                              </span>
                            </EuiButtonContent>
                          </button>
                        </EuiButtonDisplay>
                      </EuiButton>
                    </EuiSmallButton>
                  </div>
                </div>
              </EuiPopover>
            </AddVisualizationPopover>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
    <EuiSpacer
      size="xxl"
    >
      <div
        className="euiSpacer euiSpacer--xxl"
      />
    </EuiSpacer>
  </div>
</EmptyPanelView>
`;
